--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,17 +1,15 @@
-backend = "glx";
-vsync = true;
+backend = "xrender";
+vsync = false;
 refresh-rate = 60;
+unredir-if-possible = true;
 
 shadow = true;
-shadow-radius = 8;
-shadow-offset-x = -5;
-shadow-offset-y = -5;
-shadow-opacity = 0.35;
+shadow-radius = 6;
+shadow-offset-x = -4;
+shadow-offset-y = -4;
+shadow-opacity = 0.25;
 
-fading = true;
-fade-in-step = 0.06;
-fade-out-step = 0.06;
-fade-delta = 8;
+fading = false;
 
 inactive-opacity = 1.0;
 active-opacity = 1.0;
@@ -19,13 +17,13 @@ frame-opacity = 1.0;
 
 blur-method = "none";
 corner-radius = 0;
-use-damage = true;
+use-damage = false;
 
 wintypes:
 {
-  tooltip = { fade = true; shadow = false; opacity = 0.98; };
+  tooltip = { fade = false; shadow = false; opacity = 1.0; };
   dock = { shadow = false; };
   dnd = { shadow = false; };
-  popup_menu = { opacity = 0.98; };
-  dropdown_menu = { opacity = 0.98; };
+  popup_menu = { opacity = 1.0; };
+  dropdown_menu = { opacity = 1.0; };
 };
